Add Remove All button

--- a/project/templates/pages/ingredients.html
+++ b/project/templates/pages/ingredients.html
@@ -16,7 +16,7 @@
             <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
             <form action="" method="post"> 
                 {% csrf_token %}
-                <input type="text" name="scientific_name" id="scientific_name" placeholder="Add ingredients">
+                <input type="text" name="add_items" id="scientific_name" placeholder="Add ingredients">
             </form>
 
             <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
