update on base and homepage

--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -29,24 +29,9 @@
 
 <section class="section">
     <div class="container">
-        <h3 class="title has-text-centered is-size-4 mb-6"> Possible features </h3>
+        <h3 class="title has-text-centered is-size-4 mb-6"> Future updates: </h3>
         <div class="columns is-vcentered is-vcentered ">
-            <div class="column is-one-third">
-                <div class="card">
-                    <div class="card-image has-text-centered image is-5by3 ">
-                        <img src="{%static 'images/profile_pic.svg'%}" alt="shopping cart image">
-                    </div>
-                    <div class="card-content has-text-centered">
-                        <p> Check what ingredients you are missing for certain recipies or similar </p>
-                    </div>
-                    <footer class="card-footer">
-                        <p class="card-footer-item">
-                            <a class="has-text-grey" href="/shopping_cart" id="shopping_cart"> View Cart </a>
-                        </p>
-                    </footer>
-                </div>
-            </div>
-            <div class="column is-one-third">
+            <div class="column is-two-fifth">
                 <div class="card">
                     <div class="card-image has-text-centered image is-5by3">
                         <img src="{%static 'images/share.svg'%}" alt="share image">
@@ -56,12 +41,12 @@
                     </div>
                     <footer class="card-footer mt-5">
                         <p class="card-footer-item">
-                            <a class="has-text-grey" href="/share" id = "share"> Share your fridge! </a>
+                            <a class="has-text-grey" id = "share"> Share your fridge! </a>
                         </p>
                     </footer>
                 </div>
             </div>
-            <div class="column is-one-third">
+            <div class="column is-two-fifth">
                 <div class="card">
                     <div class="card-image has-text-centered image is-5by3">
                         <img src="{%static 'images/carbon.svg'%}" alt="shopping cart">
@@ -71,7 +56,7 @@
                     </div>
                     <footer class="card-footer">
                         <p class="card-footer-item">
-                            <a class="has-text-grey" href="/carbon" id = "carbon"> Does it matter? </a>
+                            <a class="has-text-grey" id = "carbon"> Does it matter? </a>
                         </p>
                     </footer>
                 </div>
