--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -26,7 +26,7 @@
     
         <div class="navbar-menu">
             <div class="navbar-start">
-                <a href="/info" class="navbar-item", id="info"> Information </a>
+                <a href="/info" class="navbar-item", id="info"> Info </a>
             </div>
             <div class="navbar-end mr-2">
                 <div class="navbar item">
@@ -38,7 +38,7 @@
                         {% endif %}
                         
                         {% if request.user.is_authenticated %}
-                            <a class="button is-success" href="/myprofile" id="myprofile">My Profile: {{request.user.username}}</a>
+                            <a class="button is-info" href="/shopping_cart" id="shopping_cart"> Shopping Cart (0) </a>
                             <a class="button is-danger" href="/logoutpage" id="logout">Logout</a>
                         {% endif %}
     
