--- a/project/templates/pages/signuppage.html
+++ b/project/templates/pages/signuppage.html
@@ -1,10 +1,57 @@
 {% extends "base.html" %}
 
+<!--css_add is used to change the form css-->
+{%load css_add%}
+
+{% block css %} 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+{% endblock css %} 
+
+
 {% block content %}
-  <h2>Sign up</h2>
+  <div class="columns is-centered">
+    <div class="column is-half has-text-centered mt-6">
+      <h5 class="title is-5 has-text-grey-light">Sign up for Fridge Friend</h5>
+
+    </div>
+  </div>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" id="submit_signup">Sign up</button>
+    
+
+    <!--{{ form.as_p }} -->
+    <div class="columns is-centered">
+      <div class="column is-one-fifth">
+        <div class="field">
+          <label class="label">Username</label>
+            {{form.username|addcss:"input is-primary"}}
+        </div>
+      </div>
+    </div>
+    <!--password 1 and 2 left-->
+    <div class="columns is-centered">
+      <div class="column is-one-fifth">
+        <div class="field">
+          <label class="label">Password</label>
+            {{form.password1|addcss:"input is-danger"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="columns is-centered">
+      <div class="column is-one-fifth">
+        <div class="field">
+          <label class="label">Confirm password</label>
+            {{form.password2|addcss:"input is-danger"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-one-fifth mb-5">
+        <a class="button is-warning" type="submit" id="submit_signup">Create account</a>
+      </div>
+    </div>
+
   </form>
 {% endblock %}
