working on javascript for signup page

--- a/project/templates/pages/loginpage.html
+++ b/project/templates/pages/loginpage.html
@@ -42,13 +42,11 @@
 
   <div class="columns is-centered has-text-centered">
     <div class="column is-one-fifth mb-5">
-      <a class="button is-warning" type="submit" id="submit_login" value="login">Login</a>
+      <button class="button is-warning" type="submit" id="submit_login" value="login">Login</button>
     </div>
   </div>
 
-
 <input type="hidden" name="next" value="{{ next }}">
-
 
 </form>
 
