--- a/project/templates/pages/loginpage.html
+++ b/project/templates/pages/loginpage.html
@@ -26,7 +26,9 @@
     <div class="column is-one-fifth mt-6">
       <div class="field">
         <label class="label">Username</label>
-          {{form.username|addcss:"input is-primary"}}
+
+          {{form.username|addcss:"input"}}          
+
       </div>
     </div>
   </div>
@@ -35,7 +37,7 @@
     <div class="column is-one-fifth">
       <div class="field">
         <label class="label">Password</label>
-            {{form.password|addcss:"input is-danger"}}
+            {{form.password|addcss:"input"}}
       </div>
     </div>
   </div>
