Add user ingredient list, create and update view

--- a/project/templates/pantrys/pantrys_ingredient_list.html
+++ b/project/templates/pantrys/pantrys_ingredient_list.html
@@ -3,6 +3,6 @@
 
 {% block content %}
     {% for object in object_list %}
-        <p>{{ object.food.name }}</p>
+        <p>{{ object.amount }} {{ object.unit }} {{ object.food.name }}</p>
     {% endfor %} 
 {% endblock content %}
