--- a/project/templates/pantrys/pantrys_recipes_list.html
+++ b/project/templates/pantrys/pantrys_recipes_list.html
@@ -2,11 +2,6 @@
 {% load static %}
 
 {% block content %}
-    {% for object in object_list %}
-        <p>{{ object.food.name }}</p>
-    {% endfor %} 
-    <br>
-
     {% for object in recipes_list %}
         <p>{{ object.name }}</p>
         <p>{{ object.description }}</p>
@@ -19,11 +14,9 @@
         </a>
         <p>{{ object.link }}</p>
         {% for object in object.ingredients.all %}
-            <p>{{ object.food.name }}</p>
-            <p>{{ object.amount }}</p>
-            <p>{{ object.unit }}</p>
+            <p>{{ object.amount }} {{ object.unit }} {{ object.food.name }}</p>
         {% endfor %} 
         <p>{{ object.data_created }}</p>
         <br>
     {% endfor %} 
-{% endblock content %}
+{% endblock %}
