--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -11,15 +11,49 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- Insert css -->
-    {% block css %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"> {% endblock css%}
+    {% block css %}{% endblock css%}
 
     <!-- Insert js -->
-    {% block javascript %} <!-- <script defer src="{% static 'js/project.js' %}"></script> --> {% endblock javascript %}
+    {% block javascript %}{% endblock javascript %}
 </head>
 <body>
-    
     <!--Header-->
-    <nav class="navbar is-white has-shadow">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="{% url 'home' %}" id="home">
+            <img src="{%static 'images/brand.png'%}" style="max-height: 60px">
+          </a>
+        </div>
+        <div class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item">Information</a>
+            </div>
+            <div class="navbar-end">
+                {% if not request.user.is_authenticated %}
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a class="button is-primary" href="/signup" id="signup"><strong>Sign up</strong></a>
+                        <a class="button is-light" href="/login" id="login">Log in</a>
+                    </div>
+                </div>
+                {% endif %}
+
+                {% if request.user.is_authenticated %}
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">{{request.user.username}}</a>
+                    <div class="navbar-dropdown is-right">
+                        <a class="navbar-item">Your Profile</a>
+                        <a class="navbar-item">Your ingredients</a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="/logoutpage">Sign out</a>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+
+    <!-- <nav class="navbar is-white has-shadow">
         <div class="navbar-brand">
             <a class="navbar-item" href="{% url 'home' %}", id="home">
                 <img src="{%static 'images/brand.png'%}" alt="brand-logo" style="max-height: 60px">
@@ -44,12 +78,12 @@
                             <a class="button is-success" href="/myprofile" id="myprofile">My Profile: {{request.user.username}}</a>
                             <a class="button is-danger" href="/logoutpage" id="logout">Logout</a>
                         {% endif %}
-    
+                        
                     </div>
                 </div>
             </div>
         </div>
-    </nav>
+    </nav> -->
     
     <!--This is used to show information messages in a bar below the navbar-->
     {% if messages %}
