--- a/project/templates/recipes/recipes_detail.html
+++ b/project/templates/recipes/recipes_detail.html
@@ -2,16 +2,61 @@
 {% load static %}
 
 {% block content %}
-    <p>{{ object.name }}</p>
-    <p>{{ object.description }}</p>
-    <p>{{ object.rating }}</p>
-    <p>{{ object.prep_time }}</p>
-    <p>{{ object.instruction }}</p>
-    <p>{{ object.servings }}</p>
-    <img src="{{ object.image.url }}" alt="{{ object.name }}">
-    <p>{{ object.link }}</p>
-    {% for object in object.ingredients.all %}
-        <p>{{ object.amount }} {{ object.unit }} {{ object.food.name }}</p>
-    {% endfor %} 
-    <p>{{ object.data_created }}</p>
-{% endblock content %}
+<div class="container">
+    <div class="text-center">
+        <img src="{{ object.image.url }}" alt="{{ object.name }}" width="1000" height="650">
+        <h1 class="text-center mt-3">{{ object.name }}</h1>
+        <div class="d-flex flex-row justify-content-center">
+            <div class="p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
+                </svg>
+                {{ object.servings }}
+            </div>
+            <div class="p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg>
+                {{ object.rating }}
+            </div>
+            <div class="p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                    <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
+                </svg>
+                Under {{ object.prep_time }}
+            </div>
+        </div>
+        <p class="mt-3">{{ object.description }}</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Unit</th>
+                            <th scope="col">Ingredient</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            {% for object in object.ingredients.all %}
+                            <tr>
+                                <td>{{ object.amount }}</td>
+                                <td>{{ object.unit }}</td>
+                                <td>{{ object.food.name }}</td>
+                            </tr>
+                            {% endfor %} 
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-sm">
+                    <p class="mt-4">{{ object.instruction }}</p>
+                </div>
+            </div>
+        </div>
+        <a href="{{ object.link }}">{{ object.link }}</a>
+        <p>{{ object.data_created }}</p>
+    </div>
+</div>
+{% endblock %}
