Add shopping list functionality.

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -26,7 +26,9 @@
     
         <div class="navbar-menu">
             <div class="navbar-start">
-                <a href="/info" class="navbar-item", id="info"> Information </a>
+                <a href="/ingredients" class="navbar-item", id="ingredients"> Your ingredients </a>
+                <a href="/shoppinglist" class="navbar-item", id="shoppinglist"> Shopping list </a>
+                <a href="/recipes" class="navbar-item", id="recipes"> Recipes </a>
             </div>
             <div class="navbar-end mr-2">
                 <div class="navbar item">
