--- a/project/templates/pantrys/base.html
+++ b/project/templates/pantrys/base.html
@@ -3,51 +3,82 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <a href="{% url 'pantrys:create' %}">
-        <span class="material-icons">
-            add_circle_outline
-        </span>
-    </a>
- 
-    {% for object in object_list %}
-        <a href="{% url 'pantrys:update' object.id %}"><p>{{ object.amount }} {{ object.unit }} {{ object.food.name }}</p></a>
-        <a href="{% url 'pantrys:delete' object.id %}">
-            <span class="material-icons">delete</span>
-        </a>
-    {% endfor %} 
-
-    <div class="container">
-        <div class="row text-center">
-            {% for object in recipes_list %}
-                <div class="col-sm">
-                    <a href="{% url 'recipes:detail' object.id %}">
-                        <img src="{{ object.image.url }}" alt="{{ object.name }}" width="200" height="165">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xl-2 d-none d-xl-block">
+            <div class="d-flex">
+                <div class="align-items-start">
+                    <h3>My Pantry</h3>
+                </div>
+                <div class="align-self-center ms-auto">
+                    <a href="{% url 'pantrys:create' %}">
+                        <span class="material-icons">
+                            add_circle_outline
+                        </span>
                     </a>
-                    <h3>{{ object.name }}</h2>
-                    <div class="d-flex flex-row justify-content-center">
-                        <div class="p-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
-                            <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
-                            </svg>
-                            {{ object.servings }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="table">
+                    {% for object in object_list %}
+                        <div class="d-flex">
+                            <tr>
+                                <td>{{ object.amount }}</td>
+                                <td>{{ object.unit }}</td>
+                                <td>{{ object.food.name }}</td>
+                                <div class="align-self-center ms-auto">
+                                    <a href="{% url 'pantrys:update' object.id %}">
+                                        <span class="material-icons">build</span>
+                                    </a>
+                                    <a href="{% url 'pantrys:delete' object.id %}">
+                                        <span class="material-icons">delete</span>
+                                    </a>
+                                </div>
+                            </tr>
                         </div>
-                        <div class="p-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                            </svg>
-                            {{ object.rating }}
+                    {% endfor %} 
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-8 col-12">
+            <h3>My Recipes</h3>
+            <div class="row">
+                {% for object in recipes_list %}
+                    <div class="col-sm-4">
+                        <div class="d-flex justify-content-center">
+                            <a href="{% url 'recipes:detail' object.id %}">
+                                <img src="{{ object.image.url }}" alt="{{ object.name }}" width="200" height="165">
+                            </a>
                         </div>
-                        <div class="p-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
-                                <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
-                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
-                            </svg>
-                            Under {{ object.prep_time }}
+                        <div class="d-flex flex-row justify-content-center">
+                            <div class="p-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                                <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
+                                </svg>
+                                {{ object.servings }}
+                            </div>
+                            <div class="p-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                                </svg>
+                                {{ object.rating }}
+                            </div>
+                            <div class="p-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                                    <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+                                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
+                                </svg>
+                                Under {{ object.prep_time }}
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <h3>{{ object.name }}</h3>
                         </div>
                     </div>
-                </div>
-            {% endfor %} 
+                {% endfor %}
+            </div>
         </div>
+        <div class="col-xl-2 d-none d-xl-block"></div>
     </div>
-
+</div>
 {% endblock %}
