--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -30,73 +30,42 @@
 </head>
 <body>
     <!--Header-->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="{% url 'home' %}" id="home">
-            <img src="{%static 'images/brand.png'%}" style="max-height: 60px">
-          </a>
-        </div>
-        <div class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item">Information</a>
-            </div>
-            <div class="navbar-end">
-                {% if not request.user.is_authenticated %}
-                <div class="navbar-item">
-                    <div class="buttons">
-                        <a class="button is-primary" href="/signup" id="signup"><strong>Sign up</strong></a>
-                        <a class="button is-light" href="/login" id="login">Log in</a>
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if request.user.is_authenticated %}
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">{{request.user.username}}</a>
-                    <div class="navbar-dropdown is-right">
-                        <a class="navbar-item">Your Profile</a>
-                        <a class="navbar-item">Your ingredients</a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item" href="/logoutpage">Sign out</a>
-                    </div>
-                </div>
-                {% endif %}
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'home' %}"><img src="{%static 'images/brand.png'%}" style="max-height: 60px"></a>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li>
+                <a class="nav-link" href="{% url 'recipes:list' %}">Recipes</a>
+              </li>
+              <li>
+                <a class="nav-link" href="{% url 'pantrys:index' %}">My Pantry</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'info' %}">Information</a>
+              </li>
+            </ul>
+          </div>
+          {% if not request.user.is_authenticated %}
+          <a class="btn btn-outline-primary mr-2" href="{% url 'signup' %}" role="button">Sign up</a>
+          <a class="btn btn-outline-primary" href="{% url 'login' %}" role="button">Log in</a>
+          {% else %}
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                {{request.user.username}}
+            </button>
+            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="dropdownMenuButton2">
+              <li><a class="dropdown-item active" href="#"><i class="fas fa-user-circle mr-3"></i>Your Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'pantrys:ingredients' %}"><i class="fas fa-carrot mr-3"></i>Your ingredients</a></li>
+              <li><a class="dropdown-item" href="{% url 'shopping:list' %}"><i class="fas fa-shopping-cart mr-3"></i>Your shopping list</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{% url 'logoutpage' %}"><i class="fas fa-sign-out-alt mr-3"></i>Sign out</a></li>
+            </ul>
+          </div>
+          {% endif %}
         </div>
     </nav>
 
-    <!-- <nav class="navbar is-white has-shadow">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="{% url 'home' %}", id="home">
-                <img src="{%static 'images/brand.png'%}" alt="brand-logo" style="max-height: 60px">
-            </a>
-        </div>
-    
-        <div class="navbar-menu">
-            <div class="navbar-start">
-                <a href="/info" class="navbar-item", id="info"> Information </a>
-            </div>
-            <div class="navbar-end mr-2">
-                <div class="navbar item">
-                    <div class="buttons">
-                        
-                        {% if not request.user.is_authenticated %}
-                            <a class="button is-warning" href="/login" id="login">Login</a>
-                            <a class="button is-primary" href="/signup" id="signup">Sign up</a>
-                        {% endif %}
-                        
-                        {% if request.user.is_authenticated %}
-                            <a class="button is-info" href="/shopping_cart" id="shopping_cart"> Shopping Cart (0) </a>
-                            <a class="button is-success" href="/myprofile" id="myprofile">My Profile: {{request.user.username}}</a>
-                            <a class="button is-danger" href="/logoutpage" id="logout">Logout</a>
-                        {% endif %}
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav> -->
-    
     <!--This is used to show information messages in a bar below the navbar-->
     {% if messages %}
         {% for message in messages %}
@@ -106,7 +75,6 @@
         {% endfor %}
     {% endif %}
     
-
     {% block content %}{% endblock content %}
     
     <!--Footer-->
