Added shopping to user ingredient save method

--- a/project/templates/shoppinglists/base.html
+++ b/project/templates/shoppinglists/base.html
@@ -47,6 +47,7 @@
                     {% endif %}
                 {% endfor %}
             </table>
+            <a href="{% url 'shopping:checkout' %}">Checkout</a>
         </div>
         <div class="col-xl-2 d-none d-xl-block"></div>
     </div>
