more user test, deleted some unused pictures, added default picture to recipe, fixed a bit of html, started on some recipe tests, but need default database

--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="column is-half has-text-centered">
-                <h2 class="is-size-6 mb-5 subtitle"> View your ingredients and recipies generated </h2>
+                <h2 class="is-size-6 mb-5 subtitle"> View your pantry and recipies generated </h2>
                 <a href="{% url 'pantrys:index' %}" class="image is-5by3" id="ingredients">
                     <img src="{%static 'images/ingredients_banner.svg'%}" alt="recipies image">
                 </a>
@@ -40,7 +40,7 @@
                     </div>
                     <footer class="card-footer mt-5">
                         <p class="card-footer-item">
-                            <a class="has-text-grey" href="/share" id = "share"> Share your fridge! </a>
+                            <a class="has-text-grey" id = "share"> Share your fridge! </a>
                         </p>
                     </footer>
                 </div>
