--- a/project/templates/pantrys/create_form.html
+++ b/project/templates/pantrys/create_form.html
@@ -7,5 +7,23 @@
       {% csrf_token %}
       {{ form|crispy }}
       <button type="submit" class="btn btn-primary">Save</button>
-   </form>
+   </form>  
+   
+   <form action="submitfood/" method="post"> 
+      {% csrf_token %}
+      <input type="text" name="food" id="name" placeholder="Add ingredients">
+      <input name="amount" id="amount" type="number" value="100">
+      <input type="hidden" name="unit" value="g">
+      <button type="submit" class="btn btn-primary">Add</button>
+  </form>
+
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+      $( function() {
+        $( "#name" ).autocomplete({
+          source: 'autocomplete/' 
+        });
+      } );
+  </script>
 {% endblock %}
