--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="{% url 'recipes:list' %}">All Recipes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'info' %}">About</a>
+                <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
             </ul>
           </div>
