--- a/project/templates/pantrys/create_form.html
+++ b/project/templates/pantrys/create_form.html
@@ -3,12 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-   <form action="" method="post">   
-      {% csrf_token %}
-      {{ form|crispy }}
-      <button type="submit" class="btn btn-primary">Save</button>
-   </form>  
-   
+   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
    <form action="submitfood/" method="post"> 
       {% csrf_token %}
       <input type="text" name="food" id="name" placeholder="Add ingredients">
