--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -8,16 +8,16 @@
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    
-    <!-- Bootstrap JS and its dependencies (Bootstrap 4.0.0) -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
-   
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">    
+
     <!-- Bootstrap JS and its dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    
+    <!-- Jquery and its dependencies -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <!-- Fontawesome icons -->
     <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -35,21 +35,11 @@
           <a class="navbar-brand" href="{% url 'home' %}"><img src="{%static 'images/brand.png'%}" style="max-height: 60px"></a>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li>
-                <a class="nav-link" href="{% url 'pantrys:ingredients' %}">My Ingredients</a>
-              </li>
-              <li>
-                <a class="nav-link" href="{% url 'pantrys:index' %}">My Recipes</a>
-              </li>
-              <li>
-                <a class="nav-link" href="{% url 'shopping:list' %}">My Shoppinglist</a>
-              </li>
-              <li>
-                <a class="nav-link" href="{% url 'recipes:list' %}">All Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
-              </li>
+              <li><a class="nav-link" href="{% url 'recipes:list' %}">All Recipes</a></li>
+              <li><a class="nav-link" href="{% url 'pantrys:index' %}">My Recipes</a></li>
+              <li><a class="nav-link" href="{% url 'pantrys:ingredients' %}">My Ingredients</a></li>
+              <li><a class="nav-link" href="{% url 'shopping:list' %}">My Shoppinglist</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
             </ul>
           </div>
           {% if not request.user.is_authenticated %}
@@ -58,12 +48,13 @@
           {% else %}
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-user-circle mr-1"></i>
                 {{request.user.username}}
             </button>
             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item active" href="#"><i class="fas fa-user-circle mr-3"></i>Your Profile</a></li>
               <li><a class="dropdown-item" href="{% url 'pantrys:ingredients' %}"><i class="fas fa-carrot mr-3"></i>Your ingredients</a></li>
               <li><a class="dropdown-item" href="{% url 'shopping:list' %}"><i class="fas fa-shopping-cart mr-3"></i>Your shopping list</a></li>
+              <li><a class="dropdown-item" href="{% url 'pantrys:index' %}"><i class="fas fa-utensils mr-3"></i>Your recipes</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{% url 'logoutpage' %}"><i class="fas fa-sign-out-alt mr-3"></i>Sign out</a></li>
             </ul>
@@ -72,14 +63,18 @@
         </div>
     </nav>
 
-    <!--This is used to show information messages in a bar below the navbar-->
-    {% if messages %}
+    <div class="container-fluid" id="id_base_container">
         {% for message in messages %}
-            <nav class="infobar">
-                <p id="messages">{{message}}</p>
-            </nav>
+            <div class="row">
+              <div class="col col-md-12">
+                  <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                      {{ message }}
+                  </div>
+              </div>
+            </div>
         {% endfor %}
-    {% endif %}
+      </div>
+    </div>
     
     {% block content %}{% endblock content %}
     
@@ -87,10 +82,19 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                Fridge Friend: INF-2900 @ UiT, University of Tromso
+                Fridge Friend: INF-2900 @ UiT, University of Tromsø
             </p>
         </div>
     </footer>
-
+  
+  <script>
+    var m = document.getElementsByClassName("alert");
+    
+    setTimeout(function(){
+        if (m && m.length) {
+            m[0].classList.add('hide');
+        }
+    }, 3000);
+  </script>
 </body>
 </html>
